[package]
name = "act"
version = "0.1.0"
authors = ["GRANVILLEHOMES\\tschwartz <tschwartz@assemigroup.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6"
tera = "0.11"
actix-web = "1.0.0"
actix-files = "0.1.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"